css/main.css
/* ... */
@media only screen and (max-width: 600px) {
    .display-1 {
        font-size: 5rem;
    }
    .display-2 {
        font-size: 3.3rem;
    }
    .subhead {
        font-size: 1.5rem;
    }
}

@media only screen and (max-width: 400px) {
    .display-1 {
        font-size: 4.2rem;
    }
    .display-2 {
        font-size: 3rem;
    }
}


/* ------------------------------------------------------------------- 
 * ## section header
 * ------------------------------------------------------------------- */
.section-header {
    text-align: center;
    position: relative;
    margin-bottom: 3.6rem;
    max-width: 960px;
}

.section-header.has-bottom-sep {
    padding-bottom: 2.1rem;
    position: relative;
}

.section-header.has-bottom-sep::before {
    content: "";
    display: inline-block;
    height: 1px;
    width: 550px;
    background-color: rgba(0, 0, 0, 0.1);
    position: absolute;
    bottom: 0;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
}

.section-header.has-bottom-sep.light-sep::before {
    background-color: rgba(255, 255, 255, 0.05);
}


/* ------------------------------------------------------------------- 
 * responsive:
 * section-header
 * ------------------------------------------------------------------- */
@media only screen and (max-width: 1200px) {
    .section-header {
        max-width: 800px;
    }
}

@media only screen and (max-width: 900px) {
    .section-header {
        max-width: 700px;
    }
}

@media only screen and (max-width: 800px) {
    .s-sponsors {
        padding-bottom: 17.4rem;
    }
    .section-header.has-bottom-sep::before {
        width: 400px;
    }
}

@media only screen and (max-width: 600px) {
    .section-header.has-bottom-sep {
        padding-bottom: 0;
    }
    .section-header.has-bottom-sep::before {
        width: 250px;
    }
}


/* ------------------------------------------------------------------- 
 * ## slick slider 
 * ------------------------------------------------------------------- */
.slick-slider .slick-slide {
    outline: none;
}

.slick-slider .slick-dots {
    display: block;
    list-style: none;
    width: 100%;
    padding: 0;
    margin: 3rem 0 0 0;
    text-align: center;
    position: absolute;
    top: 100%;
    left: 0;
}

.slick-slider .slick-dots li {
    display: inline-block;
    width: 27px;
    height: 27px;
    margin: 0;
    padding: 9px;
    cursor: pointer;
}

.slick-slider .slick-dots li button {
    display: block;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background: #959595;
    border: none;
    line-height: 10px;
    padding: 0;
    margin: 0;
    cursor: pointer;
    font: 0/0 a;
    text-shadow: none;
    color: transparent;
}

.slick-slider .slick-dots li button:hover,
.slick-slider .slick-dots li button:focus {
    outline: none;
}

.slick-slider .slick-dots li.slick-active button,
.slick-slider .slick-dots li:hover button {
    background: #39b54a;
}



/* ===================================================================
 * # header styles
 *
 * ------------------------------------------------------------------- */
.s-header {
    width: 100%;
    height: 96px;
    background-color: transparent;
    position: absolute;
    top: 0;
    z-index: 500;
}


/* -------------------------------------------------------------------
 * ## header logo
 * ------------------------------------------------------------------- */
.header-logo {
    display: inline-block;
    position: absolute;
    margin: 0;
    padding: 0;
    left: 40px;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    z-index: 501;
}

.header-logo a {
    display: block;
    margin: 9px 0 0 0;
    padding: 0;
    outline: 0;
    border: none;
    width: 80px;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}


/* ------------------------------------------------------------------- 
 * ## main navigation 
 * ------------------------------------------------------------------- */
.header-nav {
    background: #0C0C0C;
    color: rgba(255, 255, 255, 0.25);
    font-family: "montserrat-light", sans-serif;
    font-size: 1.3rem;
    line-height: 1.846;
    padding: 3.6rem 3rem 3.6rem 3.6rem;
    height: 100%;
    width: 280px;
    position: fixed;
    right: 0;
    top: 0;
    z-index: 700;
    overflow-y: auto;
    overflow-x: hidden;
    -webkit-transition: all 0.5s ease;
    transition: all 0.5s ease;
    -webkit-transform: translateZ(0);
    -webkit-backface-visibility: hidden;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
    visibility: hidden;
}

.header-nav a, .header-nav a:visited {
    color: rgba(255, 255, 255, 0.5);
}

.header-nav a:hover,
.header-nav a:focus,
.header-nav a:active {
    color: white;
}

.header-nav h3 {
    font-family: "montserrat-semibold", sans-serif;
    font-size: 11px;
    line-height: 1.5;
    text-transform: uppercase;
    letter-spacing: .25rem;
    margin-bottom: 4.8rem;
    margin-top: .9rem;
    color: #39b54a;
}

.header-nav p {
    margin-bottom: 2.7rem;
}

.header-nav__content {
    position: relative;
    left: 50px;
    opacity: 0;
    visibility: hidden;
}

.header-nav__list {
    font-family: "montserrat-regular", sans-serif;
    font-size: 1.8rem;
    margin: 3.6rem 0 3rem 0;
    padding: 0 0 1.8rem 0;
    list-style: none;
}

.header-nav__list li {
    padding-left: 0;
    line-height: 4.5rem;
}

.header-nav__list a,
.header-nav__list a:visited {
    color: #FFFFFF;
}

.header-nav__social {
    list-style: none;
    display: inline-block;
    margin: 0;
    font-size: 1.8rem;
}

.header-nav__social li {
    margin-right: 12px;
    padding-left: 0;
    display: inline-block;
}

.header-nav__social li a {
    color: rgba(255, 255, 255, 0.15);
}
/* ... */

